fix layout spacing for projects section

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ a:active{
   background-color: #e38e6e;
   color:#ffffff;
   font-weight: 400;
-  padding: 10px;
+  font-size: 16px;
+  padding: 8px 10px;
+  margin-top: 5px;
   border-radius: 4px;
   border-bottom: 2px;
   transition: 0.2s opacity;
@@ -91,7 +93,7 @@ a:active{
 }
 
 .row {
-  margin: 25px 0;
+  margin: 50px 0;
 }
 
 #intro h1{
@@ -158,7 +160,22 @@ main {
   padding-top: 98px;
 }
 
+/*projects*/
+/*  margin-bottom: 50px;
+}*/
 
+#projects h3{
+  font-size: 23px;
+  margin: 0;
+}
+
+
+
+
+
+
+
+/*footer*/
 #footer{
   background-color: #ffffff;
   /*box-shadow: 0px -1px 3px 0px rgba(50, 50, 50, 0.6);*/
